# monitor

./: .gitignore  LICENSE.md  README.md  monitor.service  pyproject.toml
monitor/: cli.py  display.py  draw.py  style.py  transport.py  utils.py  weather.py
monitor/res/fonts/: __init__.py
